--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Node.js library for Password Maker",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,10 @@
   "bugs": {
     "url": "https://github.com/emersion/node-passwordmaker/issues"
   },
-  "homepage": "https://github.com/emersion/node-passwordmaker#readme"
+  "homepage": "https://github.com/emersion/node-passwordmaker#readme",
+  "devDependencies": {
+    "assert": "^1.3.0",
+    "extend": "^3.0.0",
+    "mocha": "^2.3.3"
+  }
 }
